Alterando endpoints